argocd/media-server/sonarr/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - env:
            - name: PGID
              value: "3000"
            - name: PUID
              value: "3000"
            - name: TZ
              value: America/Chicago
            - name: SONARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  name: sonarr-db-app
                  key: password
          image: harbor.yanello.net/docker/linuxserver/sonarr:4.0.20@sha256:f247545d23ba8b233d6604575347e48a623fe6ad75dda02348bf81917f3b5c06
          imagePullPolicy: IfNotPresent
          name: sonarr
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: media
              mountPath: /data/media
            - name: config
              mountPath: /config
          readinessProbe:
            httpGet:
              path: /
              port: 8989
              httpHeaders:
                - name: Host
                  value: sonarr.yanello.net
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8989
              httpHeaders:
                - name: Host
                  value: sonarr.yanello.net
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            limits:
              memory: 600Mi
            requests:
              cpu: 10m
              memory: 200Mi
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /data/media
        - name: config
          persistentVolumeClaim:
            claimName: config
