argocd/media-server/sonarr/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: "http"
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
