argocd/media-server/sonarr/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Sonarr
    gethomepage.dev/icon: sonarr
    gethomepage.dev/description: "Smart PVR for newsgroup and bittorrent users."
    gethomepage.dev/pod-selector: app=sonarr
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - sonarr.yanello.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
