argocd/media-server/sonarr/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
      fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kometa
            app: kometa
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: overseerr
            app: overseerr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ombi
            app: ombi
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: maintainerr
            app: maintainerr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app: prowlarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: profilarr
            app: profilarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: bazarr
            app: bazarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: unpackerr
            app: unpackerr
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: qbittorrent
            app: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            k8s:cnpg.io/cluster: sonarr-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr-db
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: sonarr-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
